[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "US_TIE_Zhang_et_al_2020_py"
version = "0.1.0"
description = "Universal solution to the Transport-of-Intensity Equation for quantitative phase imaging"
readme = "README.md"
license = { text = "CC BY 4.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tifffile>=2023.1.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-nb>=1.0",
    "sphinx-autobuild>=2024.10.3",
]

[dependency-groups]
dev = [
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.10.9",
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["US_TIE_Zhang_et_al_2020_py"]
